<?xml version="1.0"?>
<package format="2">
  <name>crazyflie_cpp</name>
  <version>0.0.1</version>
  <description>CPP interface for Crazyflie Nano Quadcopter from Bitcraze</description>

  <maintainer email="whoenig@usc.edu">Wolfgang Hoenig</maintainer>

  <license>MIT</license>

  <url type="website">http://ros.org/wiki/crazyflie</url>
  <url type="bugtracker">https://github.com/whoenig/crazyflie_ros/issues</url>

  <author email="whoenig@usc.edu">Wolfgang Hoenig</author>

  <buildtool_depend>cmake</buildtool_depend>

  <depend>libusb-1.0-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
